// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#cogs/cogs/textarea/field <Field /> With additional props Default value is a string renders 1`] = `
<textarea
  className="MOCK CLASSNAME"
  defaultValue="MOCK DEFAULT VALUE"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
/>
`;

exports[`#cogs/cogs/textarea/field <Field /> With additional props Value is a string renders 1`] = `
<textarea
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
  value="MOCK VALUE"
/>
`;

exports[`#cogs/cogs/textarea/field <Field /> With required props renders 1`] = `
<textarea
  className="MOCK CLASSNAME"
  disabled={false}
  name="MOCK NAME"
  readOnly={false}
  required={false}
  value="MOCK VALUE"
/>
`;
